Use Pair instead of Map.Entry